try to debug the Cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_FILES})
 set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 get_filename_component(TARGET_NAMES ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-
+message(${TARGET_NAMES})
 project(${TARGET_NAMES})
 add_executable(${TARGET_NAMES} ${TARGET_FILES})
 
