More Debug to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,15 +17,15 @@ file(GLOB_RECURSE TARGET_HEADER_FILES
 
     
 set(TARGET_FILES ${TARGET_SOURCE_FILES} ${TARGET_HEADER_FILES} ${TARGET_SHADER_FILE} ${TARGET_EXTRA_FILES})
-
+message(${TARGET_FILES})
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_FILES})
-
-set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+message(${CMAKE_CURRENT_SOURCE_DIR})
+set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 get_filename_component(TARGET_NAMES ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-message(${TARGET_NAMES})
+
 project(${TARGET_NAMES})
-add_executable(${TARGET_NAMES} ${TARGET_FILES})
+add_library(${TARGET_NAMES} ${TARGET_FILES})
 
 target_sources(${TARGET_NAMES} PRIVATE ${TARGET_FILES})
 set(LIBMATHS_LIBRARY ${TARGET_NAMES} PARENT_SCOPE)
