--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,10 @@ file(GLOB_RECURSE TARGET_HEADER_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/*.inl)
 
     
-set(TARGET_FILES ${TARGET_SOURCE_FILES} ${TARGET_HEADER_FILES} ${TARGET_SHADER_FILE} ${TARGET_EXTRA_FILES})
-message(${TARGET_FILES})
+set(TARGET_FILES ${TARGET_SOURCE_FILES} ${TARGET_HEADER_FILES})
+
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_FILES})
-message(${CMAKE_CURRENT_SOURCE_DIR})
+
 set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 get_filename_component(TARGET_NAMES ${CMAKE_CURRENT_SOURCE_DIR} NAME)
