--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
 set(CMAKE_CXX_STANDARD 20)
 
 
+
 file(GLOB_RECURSE TARGET_SOURCE_FILES 
 	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/*.c
@@ -22,7 +23,11 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_FILES})
 
 set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
+
+
 get_filename_component(TARGET_NAMES ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+
+set_target_properties(${TARGET_NAMES} PROPERTIES LINKER_LANGUAGE CXX)
 
 project(${TARGET_NAMES})
 add_library(${TARGET_NAMES} ${TARGET_FILES})
