feat: Update CmakeList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library(${TARGET_NAMES} ${TARGET_FILES})
 
 target_sources(${TARGET_NAMES} PRIVATE ${TARGET_FILES})
 
+set(LIBMATHS_LIBRARY ${TARGET_NAMES} PARENT_SCOPE)
 set(LIBMATHS_INCLUDE_DIR ${TARGET_INCLUDE_DIR} PARENT_SCOPE)
 
 target_include_directories(${TARGET_NAMES} PRIVATE ${TARGET_INCLUDE_DIR})
